--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -20,7 +20,11 @@
      "text": [
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\piotr\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:151: UserWarning: Field \"model_dirs\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -33,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +158,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +185,7 @@
        "(6072, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +298,7 @@
        "5        R M Ballantyne      5596709"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +329,7 @@
        "Name: author, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79378,11 +79382,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "authors_5 = {                                              # Author : [Exluded books]                                                        \n",
+    "authors_10 = {                                              # Author : [Exluded books]                                                        \n",
     "    \"Joseph Conrad\": [],   \n",
     "    \"Zane Grey\": [],\n",
     "    \"William Henry Hudson\": [],      \n",
@@ -79397,12 +79401,39 @@
     "        \"Lucy Maud Montgomery Short Stories, 1907 to 1908\",\n",
     "        \"Lucy Maud Montgomery Short Stories, 1909 to 1922\",\n",
     "    ],\n",
+    "    \"Mark Twain\": [\n",
+    "        \"Mark Twain's Speeches\",\n",
+    "        \"Essays on Paul Bourget\",\n",
+    "        \"Extracts from Adam's Diary\",\n",
+    "        \"The $30,000 Bequest and Other Stories\",\n",
+    "        \"Is Shakespeare Dead?\",\n",
+    "    ],\n",
+    "    \"Lewis Carroll\": [\n",
+    "        \"Eight or Nine Wise Words about Letter-Writing\",\n",
+    "        \"Feeding the Mind\",\n",
+    "        \"Phantasmagoria and Other Poems\",\n",
+    "        \"Rhyme_ And Reason_\",\n",
+    "        \"Songs From Alice in Wonderland and Through the Looking-Glass\",\n",
+    "        \"Symbolic Logic\",\n",
+    "        \"The Game of Logic\",\n",
+    "        \"The Hunting of the Snark\",\n",
+    "        \"Three Sunsets and Other Poems\",\n",
+    "    ],\n",
+    "    \"Virginia Woolf\": [],\n",
+    "    \"George Eliot\": [\n",
+    "        \"How Lisa Loved the King\",\n",
+    "        \"The Essays of George Eliot\"\n",
+    "    ],\n",
+    "    \"Howard Pyle\": [\n",
+    "        \"The Story of Sir Launcelot and His Companions\",\n",
+    "        \"The Story of the Champions of the Round Table\"\n",
+    "    ]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79413,7 +79444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -79444,28 +79475,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Mark Twain</td>\n",
+       "      <td>2790240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>Zane Grey</td>\n",
        "      <td>2353362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>Joseph Conrad</td>\n",
        "      <td>2141653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <td>George Eliot</td>\n",
+       "      <td>1709186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>Benjamin Disraeli</td>\n",
        "      <td>1695897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>5</th>\n",
        "      <td>Lucy Maud Montgomery</td>\n",
        "      <td>1343932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>6</th>\n",
        "      <td>William Henry Hudson</td>\n",
        "      <td>1060531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Howard Pyle</td>\n",
+       "      <td>755466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Virginia Woolf</td>\n",
+       "      <td>375131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Lewis Carroll</td>\n",
+       "      <td>298666</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -79473,41 +79529,46 @@
       ],
       "text/plain": [
        "                 author  words_count\n",
-       "0             Zane Grey      2353362\n",
-       "1         Joseph Conrad      2141653\n",
-       "2     Benjamin Disraeli      1695897\n",
-       "3  Lucy Maud Montgomery      1343932\n",
-       "4  William Henry Hudson      1060531"
+       "0            Mark Twain      2790240\n",
+       "1             Zane Grey      2353362\n",
+       "2         Joseph Conrad      2141653\n",
+       "3          George Eliot      1709186\n",
+       "4     Benjamin Disraeli      1695897\n",
+       "5  Lucy Maud Montgomery      1343932\n",
+       "6  William Henry Hudson      1060531\n",
+       "7           Howard Pyle       755466\n",
+       "8        Virginia Woolf       375131\n",
+       "9         Lewis Carroll       298666"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_5 = df[df['author'].isin(authors_5.keys())]\n",
-    "filter_books(df_5, authors_5)\n",
-    "df_5_total_sorted = get_df_grouped_by_author(df_5)\n",
-    "df_5_total_sorted.head(10)"
+    "df_10 = df[df['author'].isin(authors_10.keys())]\n",
+    "filter_books(df_10, authors_10)\n",
+    "df_10_total_sorted = get_df_grouped_by_author(df_10)\n",
+    "df_10_total_sorted.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To fit previously set contraints, above 5 authors has been chosen along with their books that will be analyzed.\n",
+    "To fit previously set contraints, above 10 authors has been chosen along with their books that will be analyzed.\n",
     "\n",
     "Data about selected authors is saved in `res/books/selected` directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_authors = df_5_total_sorted['author'].tolist()\n",
+    "selected_authors = df_10_total_sorted['author'].tolist()\n",
     "os.makedirs(configuration.selected_books_dir, exist_ok=True)\n",
     "with open(configuration.selected_authors_filepath, 'w', encoding='utf-8') as f:\n",
     "    f.write('\\n'.join(selected_authors))"
@@ -79515,18 +79576,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_5.to_csv(configuration.selected_books_csv_filepath, index=False)"
+    "df_10.to_csv(configuration.selected_books_csv_filepath, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Books dataset source\n",
