Last setup before generating

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -130,15 +130,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = secrets.openai_api_key\n",
-    "max_tokens = 4096\n",
-    "\n",
     "models = {\n",
-    "    # \"gpt-3.5-turbo-0125\": ChatOpenAI(model=\"gpt-3.5-turbo-0125\", max_tokens=max_tokens),\n",
-    "    # \"gpt-4o\": ChatOpenAI(model=\"gpt-4o\", api_key=secrets.openai_api_key, max_tokens=max_tokens),\n",
-    "    # \"gemini-1.5-flash\": ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", google_api_key=secrets.google_api_key, max_tokens=max_tokens),\n",
-    "    # \"open-mixtral-8x7b\": ChatMistralAI(model=\"open-mixtral-8x7b\", api_key=secrets.mistral_api_key, max_tokens=max_tokens),\n",
-    "    # \"claude-3-haiku\": ChatAnthropic(model=\"claude-3-haiku\", api_key=secrets.anthropic_api_key, max_tokens=max_tokens),\n",
+    "    \"gpt-3.5-turbo-0125\": ChatOpenAI(model=\"gpt-3.5-turbo-0125\", max_tokens=configuration.max_tokens),\n",
+    "    \"gpt-4o\": ChatOpenAI(model=\"gpt-4o\", api_key=secrets.openai_api_key, max_tokens=configuration.max_tokens),\n",
+    "    \"gemini-1.5-flash\": ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", google_api_key=secrets.google_api_key, max_tokens=configuration.max_tokens),\n",
+    "    \"open-mixtral-8x7b\": ChatMistralAI(model=\"open-mixtral-8x7b\", api_key=secrets.mistral_api_key, max_tokens=configuration.max_tokens),\n",
+    "    \"claude-3-haiku-20240307\": ChatAnthropic(model=\"claude-3-haiku-20240307\", api_key=secrets.anthropic_api_key, max_tokens=configuration.max_tokens),\n",
     "}"
    ]
   },
@@ -152,6 +149,7 @@
     "    models=models,\n",
     "    queries_path=configuration.query_filepath,\n",
     "    authors_path=configuration.selected_authors_filepath,\n",
+    "    res_directory=configuration.res_directory,\n",
     "    response_length=configuration.response_length\n",
     ")"
    ]
@@ -165,14 +163,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path:  res\\gpt-3.5-turbo-0125\\Zane Grey\\1717792219.json\n"
+      "Generating [gemini-1.5-flash]-[Zane Grey] Describe the most peculiar meal you've ever encountered.\n"
      ]
     }
    ],
    "source": [
-    "generated_texts = text_generator.generate()\n",
-    "for generated_text in generated_texts:\n",
-    "    generated_text.save(configuration.res_directory)"
+    "generated_texts = text_generator.generate()"
    ]
   }
  ],
