--- a/generator.ipynb
+++ b/generator.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Generator\n",
     "\n",
-    "Notebook uses Large Language Models to generate the text for 10 authors from `res/selected/author_list` file. It uses the list of queries from `res/queries` and the system specification message that together create the prompt. The goal is to generate text in writing style of the specific author, where the topic is of secondary importance.\n",
+    "Notebook uses Large Language Models to generate the text for 10 authors from `res/selected/author_list` file. It uses the list of queries from `res/queries` and the system specification message that together create the prompt. The goal is to generate text in writing style of the specific author, where the topic is of secondary importance. Results are saved in `res` directory.\n",
     "\n",
     "In order to run the notebook create `.env` file in the root of the project and set the api keys in the following manner:\n",
     "\n",
@@ -74,7 +74,7 @@
     "}\n",
     "```\n",
     "\n",
-    "Max token parameter is set to 4096, due to the contraints of `claude-3-haiku` model.\n",
+    "Max token parameter is set to 4096, due to the contraints of `claude-3-haiku-20240307` model.\n",
     "\n"
    ]
   },
@@ -105,11 +105,6 @@
     "from langchain_mistralai.chat_models import ChatMistralAI\n",
     "from langchain_openai import ChatOpenAI\n",
     "import os\n",
-    "\n",
-    "# TODO: Delete after development\n",
-    "import src\n",
-    "import importlib\n",
-    "importlib.reload(src)\n",
     "\n",
     "from src import *"
    ]
