--- a/book_stats.ipynb
+++ b/book_stats.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notebook uses dataset, which source is annotated below. Author's total count is analyzed in the dimensions of total words count from the author's books. The goal is to give the insights on each of the author in order to select few of them for further analysis of Writing style of Generative AI.\n",
+    "Notebook uses dataset, which source is annotated at the bottom of the page. Author's total count is analyzed in the dimensions of total words count from the author's books. The goal is to give the insights on each of the author in order to select few of them for further analysis of writing style of Generative AI.\n",
     "\n",
     "Notebook assumes that `res/books/author_list` file containing author names from the dataset can be found. Moreover dataset in `res/books/data` can be found, where each book's file name follows such a format - `{author}__{title}.txt`."
    ]
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create data frame that contains info about author book and words count in the book"
+    "Create data frame that contains info about authors, books and words count in the book"
    ]
   },
   {
@@ -306,36 +306,6 @@
    "source": [
     "df_total_sorted = get_df_grouped_by_author(df, skip_first_row=True)\n",
     "df_total_sorted.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1        George Alfred Henty\n",
-       "2           Anthony Trollope\n",
-       "3       Charlotte Mary Yonge\n",
-       "4            Charles Dickens\n",
-       "5             R M Ballantyne\n",
-       "6      James Fenimore Cooper\n",
-       "7     Robert Louis Stevenson\n",
-       "8       William Dean Howells\n",
-       "9        Henry Rider Haggard\n",
-       "10          Sir Walter Scott\n",
-       "Name: author, dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_total_sorted[:10]['author']"
    ]
   },
   {
@@ -79373,7 +79343,7 @@
     "\n",
     "As the reference we can use \"Federalists Papers\" used at \"Inference in an authorship problem\" study of Frederick Mosteller and David L. Wallace. Analyzed text together accounts for around 180 000 words. \n",
     "\n",
-    "Choose 5 authors to be analyzed:\n",
+    "Choose 10 authors to be analyzed:\n",
     "- At least 200 000 total words count in the dataset\n",
     "- Stick to novel writings\n",
     "\n",
