--- a/generator.ipynb
+++ b/generator.ipynb
@@ -80,25 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\piotr\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\pydantic\\_internal\\_fields.py:151: UserWarning: Field \"model_dirs\" has conflict with protected namespace \"model_\".\n",
-      "\n",
-      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_anthropic import ChatAnthropic\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
@@ -110,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,25 +128,169 @@
     "    queries_path=configuration.query_filepath,\n",
     "    authors_path=configuration.selected_authors_filepath,\n",
     "    res_directory=configuration.res_directory,\n",
-    "    response_length=configuration.response_length\n",
+    "    response_number_of_words=configuration.response_number_of_words\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating [gemini-1.5-flash]-[Zane Grey] Describe the most peculiar meal you've ever encountered.\n"
+      "[1/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[2/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[3/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[4/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[5/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[6/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
+      "[7/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
+      "[8/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
+      "[9/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
+      "[10/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Convince a group of fish that life on land is far superior.\n",
+      "[11/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[12/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[13/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[14/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[15/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[16/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
+      "[17/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
+      "[18/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
+      "[19/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
+      "[20/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Write a song lamenting the decline of the telegram.\n",
+      "[21/125] Generating [gpt-3.5-turbo-0125]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[22/125] Generating [gpt-4o]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[23/125] Generating [gemini-1.5-flash]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[24/125] Generating [open-mixtral-8x7b]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[25/125] Generating [claude-3-haiku-20240307]-[Lucy Maud Montgomery] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[26/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[27/125] Generating [gpt-4o]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[28/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[29/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[30/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[31/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
+      "[32/125] Generating [gpt-4o]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
+      "[33/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
+      "[34/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
+      "[35/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Convince a group of fish that life on land is far superior.\n",
+      "[36/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[37/125] Generating [gpt-4o]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[38/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[39/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[40/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[41/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
+      "[42/125] Generating [gpt-4o]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
+      "[43/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
+      "[44/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
+      "[45/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Write a song lamenting the decline of the telegram.\n",
+      "[46/125] Generating [gpt-3.5-turbo-0125]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[47/125] Generating [gpt-4o]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[48/125] Generating [gemini-1.5-flash]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[49/125] Generating [open-mixtral-8x7b]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[50/125] Generating [claude-3-haiku-20240307]-[William Henry Hudson] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[51/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[52/125] Generating [gpt-4o]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[53/125] Generating [gemini-1.5-flash]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[54/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[55/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[56/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
+      "[57/125] Generating [gpt-4o]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
+      "[58/125] Generating [gemini-1.5-flash]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
+      "[59/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
+      "[60/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Convince a group of fish that life on land is far superior.\n",
+      "[61/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[62/125] Generating [gpt-4o]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[63/125] Generating [gemini-1.5-flash]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[64/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[65/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[66/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
+      "[67/125] Generating [gpt-4o]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
+      "[68/125] Generating [gemini-1.5-flash]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
+      "[69/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
+      "[70/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Write a song lamenting the decline of the telegram.\n",
+      "[71/125] Generating [gpt-3.5-turbo-0125]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[72/125] Generating [gpt-4o]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[73/125] Generating [gemini-1.5-flash]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[74/125] Generating [open-mixtral-8x7b]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[75/125] Generating [claude-3-haiku-20240307]-[Howard Pyle] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[76/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[77/125] Generating [gpt-4o]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[78/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[79/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[80/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[81/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
+      "[82/125] Generating [gpt-4o]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
+      "[83/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
+      "[84/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
+      "[85/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Convince a group of fish that life on land is far superior.\n",
+      "[86/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[87/125] Generating [gpt-4o]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[88/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[89/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[90/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[91/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
+      "[92/125] Generating [gpt-4o]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
+      "[93/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
+      "[94/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
+      "[95/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Write a song lamenting the decline of the telegram.\n",
+      "[96/125] Generating [gpt-3.5-turbo-0125]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[97/125] Generating [gpt-4o]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[98/125] Generating [gemini-1.5-flash]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[99/125] Generating [open-mixtral-8x7b]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[100/125] Generating [claude-3-haiku-20240307]-[Virginia Woolf] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[101/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[102/125] Generating [gpt-4o]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[103/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[104/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[105/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Describe a dream you might have after a particularly spicy dinner.\n",
+      "[106/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
+      "[107/125] Generating [gpt-4o]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
+      "[108/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
+      "[109/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
+      "[110/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Convince a group of fish that life on land is far superior.\n",
+      "[111/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[112/125] Generating [gpt-4o]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[113/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[114/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[115/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Explain the concept of fashion to a flock of confused pigeons.\n",
+      "[116/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
+      "[117/125] Generating [gpt-4o]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
+      "[118/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
+      "[119/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
+      "[120/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Write a song lamenting the decline of the telegram.\n",
+      "[121/125] Generating [gpt-3.5-turbo-0125]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[122/125] Generating [gpt-4o]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[123/125] Generating [gemini-1.5-flash]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[124/125] Generating [open-mixtral-8x7b]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n",
+      "[125/125] Generating [claude-3-haiku-20240307]-[Lewis Carroll] Describe a heated debate between a teacup and a coffee mug.\n"
      ]
     }
    ],
    "source": [
-    "generated_texts = text_generator.generate()"
+    "generated_texts, unprocessed_requests = text_generator.generate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unprocessed_requests"
    ]
   }
  ],
